added torch knn extended graph

--- a/script.ipynb
+++ b/script.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6312\\2030801359.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_10144\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -139,12 +139,12 @@
     "        # print(\"self.W_theta.shape : \", self.W_theta.shape)\n",
     "    \n",
     "    def forward(self, previous_inclusion_score, return_flatten=True):\n",
-    "        list_inc_score = torch.zeros((self.nodes.shape[0], self.size))                               #list of \"output_dimension\" for each \"list_node\" element\n",
-    "        for index_current_node, list_neighbors in enumerate(self.adjacency_matrix):       # for each node and its adjacency nodes\n",
-    "            neighbors = self.nodes[list_neighbors.nonzero()]        \n",
-    "            diff = self.nodes[index_current_node] - neighbors                                                           # Compute the differences between current_node and all neighbor nodes   (x_i - x_j)\n",
-    "            to_norm = self.W_theta.T.unsqueeze(1).repeat(1, diff.shape[0], 1)[0] * diff.squeeze(1)\n",
-    "            neigh_distances = torch.norm(to_norm, dim=1)                               # Compute the norm for each vector difference  ||W_theta * (x_i - x_j)||\n",
+    "        list_inc_score = torch.zeros((self.nodes.shape[0], self.size))                                          #list of \"output_dimension\" for each \"list_node\" element\n",
+    "        for index_current_node, list_neighbors in enumerate(self.adjacency_matrix):                             # for each node and its adjacency nodes\n",
+    "            neighbors = self.nodes[list_neighbors.nonzero()]                                                    # get neighbors nodes\n",
+    "            diff = self.nodes[index_current_node] - neighbors                                                   # Compute the differences between current_node and all neighbor nodes   (x_i - x_j)\n",
+    "            to_norm = self.W_theta.T.unsqueeze(1).repeat(1, diff.shape[0], 1)[0] * diff.squeeze(1)              # Compute W_theta * (x_i - x_j)\n",
+    "            neigh_distances = torch.norm(to_norm, dim=1)                                                        # Compute the norm for each vector difference  ||W_theta * (x_i - x_j)||\n",
     "            list_inc_score[index_current_node] = (self.W_phi * neigh_distances.max()).clone()                   # Add (W_phi * ||W_theta * (x_i - x_j)||) to the inclusion score list\n",
     "\n",
     "        if len(previous_inclusion_score)==0:                            # return if no previous inclusion score\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
     "\n",
     "target_number_point = min(len(graph._node), user_number_triangles*3)   # number of points for the simplification\n",
     "layer = MultinomialLayer(target_number_point, torch.Tensor(np.array(graph)))\n",
-    "list_k_nodes = layer.forward(torch.Tensor(inclusion_score))\n",
-    "print(list_k_nodes.shape)"
+    "extended_graph_nodes = layer.forward(torch.Tensor(inclusion_score))\n",
+    "print(extended_graph_nodes.shape)"
    ]
   },
   {
@@ -244,49 +244,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 22500\n",
-      "Number of edges: 21000\n"
+      "Number of nodes: 1500\n",
+      "Number of edges: 12612\n"
      ]
     }
    ],
    "source": [
-    "def knn_and_extended_graph(list_k_nodes_i, k_neighbors=15):\n",
-    "    \"\"\"\n",
-    "    Perform k-NN on the given points and construct an extended graph.\n",
+    "from torch.nn.functional import pairwise_distance\n",
     "\n",
+    "def create_knn_graph(nodes, k):\n",
+    "    \"\"\"\n",
+    "    Create a graph based on k-nearest neighbors using PyTorch.\n",
     "    Parameters:\n",
-    "    - list_k_nodes_i: array-like\n",
-    "        List of coordinates of the selected points.\n",
-    "    - k_neighbors: int, optional (default=15)\n",
-    "        Number of neighbors for k-NN.\n",
-    "\n",
+    "    - nodes: Tensor of shape (n, 3) representing 3D nodes.\n",
+    "    - k: Number of nearest neighbors.\n",
     "    Returns:\n",
-    "    - extended_graph_i: networkx.Graph\n",
-    "        Extended graph.\n",
+    "    - adjacency_matrix: Binary adjacency matrix representing the graph.\n",
     "    \"\"\"\n",
+    "    expanded_x1 = nodes.unsqueeze(1)\n",
+    "    expanded_x2 = nodes.unsqueeze(0)\n",
+    "    distances = torch.norm(expanded_x1 - expanded_x2, dim=2)        # distance matrix\n",
     "\n",
-    "    # Perform k-NN on the selected points\n",
-    "    _, indices = NearestNeighbors(n_neighbors=k_neighbors).fit(list_k_nodes_i).kneighbors(list_k_nodes_i)\n",
+    "    _, indices = torch.topk(distances, k + 1, largest=False, sorted=True, dim=1)\n",
+    "    indices = indices[:, 1:]  # Exclude the node itself\n",
     "\n",
-    "    # Construct the extended graph\n",
-    "    extended_graph_i = nx.Graph()\n",
-    "    for poly in indices:\n",
-    "        current_node = tuple(list_k_nodes_i[poly[0]])\n",
-    "        for index_other_node in poly[1:]:\n",
-    "            edge = current_node, tuple(list_k_nodes_i[index_other_node])\n",
-    "            extended_graph_i.add_edge(*edge)\n",
+    "    # Create adjacency matrix\n",
+    "    adjacency_matrix = torch.zeros(nodes.shape[0], nodes.shape[0], dtype=torch.float32)\n",
+    "    adjacency_matrix.scatter_(1, indices, 1)\n",
     "\n",
-    "    return extended_graph_i\n",
+    "    return adjacency_matrix\n",
     "\n",
-    "extended_graph = knn_and_extended_graph(list_k_nodes)\n",
-    "transformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)"
+    "extended_graph_adjacency_matrix = create_knn_graph(extended_graph_nodes, k=15)\n",
+    "transformation.print_graph_properties(graph=nx.from_numpy_array(extended_graph_adjacency_matrix.numpy()), display_graph=False, display_labels=False)"
    ]
   },
   {
@@ -298,44 +294,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.W_theta.shape : \n",
-      "torch.Size([1, 3])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(22500, 64)"
+       "torch.Size([1500, 64])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "devconv = DevConv(extended_graph, 64)\n",
-    "inclusion_score = devconv.forward(previous_inclusion_score=np.array([]), return_flatten=False)\n",
+    "devconv = DevConv(extended_graph_nodes,extended_graph_adjacency_matrix, 64)\n",
+    "inclusion_score = devconv(previous_inclusion_score=torch.empty((0)), return_flatten=False)\n",
     "inclusion_score.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([22500, 22500])\n"
+      "torch.Size([1500, 1500])\n"
      ]
     }
    ],
@@ -369,8 +357,8 @@
     "        return final_term\n",
     "\n",
     "\n",
-    "f = np.mean(inclusion_score, axis=1)                            # Flatten the matrix of inclusion score \n",
-    "layer = SparseAttentionEdgePredictorLayer(torch.Tensor(list(extended_graph.nodes())), torch.Tensor(nx.adjacency_matrix(extended_graph).toarray()))\n",
+    "f = torch.mean(inclusion_score, dim=1)                            # Flatten the matrix of inclusion score\n",
+    "layer = SparseAttentionEdgePredictorLayer(extended_graph_nodes, extended_graph_adjacency_matrix)\n",
     "S = layer.forward(torch.Tensor(f))\n",
     "print(S.shape)"
    ]
@@ -384,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,29 +395,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(22500, 22500)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3475, 0.3780, 0.4117,  ..., 0.2834, 0.2745, 0.3024],\n",
+      "        [0.3787, 0.4129, 0.4511,  ..., 0.3068, 0.2968, 0.3280],\n",
+      "        [0.4132, 0.4519, 0.4950,  ..., 0.3325, 0.3213, 0.3562],\n",
+      "        ...,\n",
+      "        [0.2821, 0.3048, 0.3298,  ..., 0.2337, 0.2269, 0.2481],\n",
+      "        [0.2730, 0.2946, 0.3184,  ..., 0.2267, 0.2202, 0.2405],\n",
+      "        [0.3014, 0.3264, 0.3538,  ..., 0.2485, 0.2411, 0.2642]],\n",
+      "       grad_fn=<DivBackward0>)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m layer \u001b[38;5;241m=\u001b[39m FaceCandidatesLayer(extended_graph_adjacency_matrix)\n\u001b[0;32m     14\u001b[0m A_s \u001b[38;5;241m=\u001b[39m layer\u001b[38;5;241m.\u001b[39mforward(torch\u001b[38;5;241m.\u001b[39mTensor(S))\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mA_s\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'shape'"
+     ]
     }
    ],
-   "source": [
-    "nx.adjacency_matrix(extended_graph).toarray().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class FaceCandidatesLayer(nn.Module):\n",
     "    def __init__(self, adjacency_matrix):\n",
@@ -443,7 +437,7 @@
     "        return 0\n",
     "\n",
     "\n",
-    "layer = FaceCandidatesLayer(torch.Tensor(nx.adjacency_matrix(extended_graph).toarray()))\n",
+    "layer = FaceCandidatesLayer(extended_graph_adjacency_matrix)\n",
     "A_s = layer.forward(torch.Tensor(S))\n",
     "print(A_s.shape)"
    ]
