added torch p_init

--- a/script.ipynb
+++ b/script.ipynb
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_10144\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_4840\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "torch.Size([1500, 64])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,32 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3475, 0.3780, 0.4117,  ..., 0.2834, 0.2745, 0.3024],\n",
-      "        [0.3787, 0.4129, 0.4511,  ..., 0.3068, 0.2968, 0.3280],\n",
-      "        [0.4132, 0.4519, 0.4950,  ..., 0.3325, 0.3213, 0.3562],\n",
-      "        ...,\n",
-      "        [0.2821, 0.3048, 0.3298,  ..., 0.2337, 0.2269, 0.2481],\n",
-      "        [0.2730, 0.2946, 0.3184,  ..., 0.2267, 0.2202, 0.2405],\n",
-      "        [0.3014, 0.3264, 0.3538,  ..., 0.2485, 0.2411, 0.2642]],\n",
-      "       grad_fn=<DivBackward0>)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m layer \u001b[38;5;241m=\u001b[39m FaceCandidatesLayer(extended_graph_adjacency_matrix)\n\u001b[0;32m     14\u001b[0m A_s \u001b[38;5;241m=\u001b[39m layer\u001b[38;5;241m.\u001b[39mforward(torch\u001b[38;5;241m.\u001b[39mTensor(S))\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mA_s\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'shape'"
+      "torch.Size([1500, 1500])\n"
      ]
     }
    ],
@@ -431,147 +413,13 @@
     "        self.adjacency_matrix = adjacency_matrix\n",
     "\n",
     "    def forward(self, S):\n",
-    "        A_s = torch.matmul(torch.matmul(S, self.adjacency_matrix), S.T)    # A_s = S * A * S.T\n",
-    "        A_s = A_s/A_s.max()                                         # Normalize\n",
-    "        print(A_s)\n",
-    "        return 0\n",
+    "        A_s = torch.matmul(torch.matmul(S, self.adjacency_matrix), S.T)     # A_s = S * A * S.T\n",
+    "        A_s = A_s/A_s.max()                                                 # Normalize\n",
+    "        return A_s\n",
     "\n",
     "\n",
     "layer = FaceCandidatesLayer(extended_graph_adjacency_matrix)\n",
-    "A_s = layer.forward(torch.Tensor(S))\n",
-    "print(A_s.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 1)\t1\n",
-      "  (0, 2)\t1\n",
-      "  (0, 3)\t1\n",
-      "  (0, 4)\t1\n",
-      "  (0, 5)\t1\n",
-      "  (0, 6)\t1\n",
-      "  (0, 7)\t1\n",
-      "  (0, 8)\t1\n",
-      "  (0, 9)\t1\n",
-      "  (0, 10)\t1\n",
-      "  (0, 11)\t1\n",
-      "  (0, 12)\t1\n",
-      "  (0, 13)\t1\n",
-      "  (0, 14)\t1\n",
-      "  (1, 0)\t1\n",
-      "  (2, 0)\t1\n",
-      "  (3, 0)\t1\n",
-      "  (4, 0)\t1\n",
-      "  (5, 0)\t1\n",
-      "  (6, 0)\t1\n",
-      "  (7, 0)\t1\n",
-      "  (8, 0)\t1\n",
-      "  (9, 0)\t1\n",
-      "  (10, 0)\t1\n",
-      "  (11, 0)\t1\n",
-      "  :\t:\n",
-      "  (22485, 22489)\t1\n",
-      "  (22485, 22490)\t1\n",
-      "  (22485, 22491)\t1\n",
-      "  (22485, 22492)\t1\n",
-      "  (22485, 22493)\t1\n",
-      "  (22485, 22494)\t1\n",
-      "  (22485, 22495)\t1\n",
-      "  (22485, 22496)\t1\n",
-      "  (22485, 22497)\t1\n",
-      "  (22485, 22498)\t1\n",
-      "  (22485, 22499)\t1\n",
-      "  (22486, 22485)\t1\n",
-      "  (22487, 22485)\t1\n",
-      "  (22488, 22485)\t1\n",
-      "  (22489, 22485)\t1\n",
-      "  (22490, 22485)\t1\n",
-      "  (22491, 22485)\t1\n",
-      "  (22492, 22485)\t1\n",
-      "  (22493, 22485)\t1\n",
-      "  (22494, 22485)\t1\n",
-      "  (22495, 22485)\t1\n",
-      "  (22496, 22485)\t1\n",
-      "  (22497, 22485)\t1\n",
-      "  (22498, 22485)\t1\n",
-      "  (22499, 22485)\t1\n",
-      "tensor([[0.0940, 1.0000, 1.0000,  ..., 0.9589, 0.9587, 0.9566],\n",
-      "        [0.0491, 0.9104, 0.8739,  ..., 0.5007, 0.4992, 0.4819],\n",
-      "        [0.0515, 0.9167, 0.8826,  ..., 0.5252, 0.5237, 0.5069],\n",
-      "        ...,\n",
-      "        [0.0940, 1.0000, 1.0000,  ..., 0.9589, 0.9587, 0.9566],\n",
-      "        [0.0943, 1.0005, 1.0007,  ..., 0.9621, 0.9620, 0.9601],\n",
-      "        [0.0980, 1.0061, 1.0088,  ..., 1.0000, 1.0000, 1.0000]],\n",
-      "       grad_fn=<DivBackward0>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "adjacency = nx.adjacency_matrix(extended_graph)\n",
-    "# S = np.random.rand(target_number_point, target_number_point)\n",
-    "print(adjacency)\n",
-    "print(S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[137], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m A_s \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((target_number_point,target_number_point))   \u001b[38;5;66;03m# Init A_s to 0\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m A_s \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmatmul(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43madjacency\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m, S\u001b[38;5;241m.\u001b[39mT)     \u001b[38;5;66;03m# A_s = S * A * S.T\u001b[39;00m\n\u001b[0;32m      3\u001b[0m A_s \u001b[38;5;241m=\u001b[39m A_s\u001b[38;5;241m/\u001b[39mA_s\u001b[38;5;241m.\u001b[39mmax()                                         \u001b[38;5;66;03m# Normalize\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Arthur\\miniconda3\\envs\\meshPFE\\lib\\site-packages\\torch\\_tensor.py:1030\u001b[0m, in \u001b[0;36mTensor.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   1028\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(Tensor\u001b[38;5;241m.\u001b[39m__array__, (\u001b[38;5;28mself\u001b[39m,), \u001b[38;5;28mself\u001b[39m, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[0;32m   1029\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1030\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1032\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mastype(dtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
-     ]
-    }
-   ],
-   "source": [
-    "A_s = np.zeros((target_number_point,target_number_point))   # Init A_s to 0\n",
-    "A_s = np.matmul(np.matmul(S, adjacency.toarray()), S.T)     # A_s = S * A * S.T\n",
-    "A_s = A_s/A_s.max()                                         # Normalize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3.77317640e-32 3.78960629e-32 3.86623573e-32 ... 5.82539176e-31\n",
-      "  8.44776855e-31 8.26253392e-31]\n",
-      " [3.78960629e-32 3.80608375e-32 3.89744609e-32 ... 5.84326241e-31\n",
-      "  8.44162180e-31 8.26461006e-31]\n",
-      " [3.86623573e-32 3.89744609e-32 3.99135018e-32 ... 5.98038937e-31\n",
-      "  8.68159401e-31 8.48203340e-31]\n",
-      " ...\n",
-      " [5.82539176e-31 5.84326241e-31 5.98038937e-31 ... 1.19301961e-29\n",
-      "  1.55922548e-29 1.49034458e-29]\n",
-      " [8.44776855e-31 8.44162180e-31 8.68159401e-31 ... 1.55922548e-29\n",
-      "  2.55336088e-29 2.35371110e-29]\n",
-      " [8.26253392e-31 8.26461006e-31 8.48203340e-31 ... 1.49034458e-29\n",
-      "  2.35371110e-29 2.19917201e-29]]\n",
-      "(1500, 1500)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(A_s)  # symmétrique\n",
+    "A_s = layer(torch.Tensor(S))\n",
     "print(A_s.shape)"
    ]
   },
@@ -598,106 +446,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IGRAPH U--- 1500 11835 -- \n",
-      "+ attr: _nx_name (v)\n"
+      "IGRAPH U-W- 1500 12612 -- \n",
+      "+ attr: _nx_name (v), weight (e)\n"
      ]
     }
    ],
    "source": [
-    "igraph_g = igraphGraph(directed=extended_graph.is_directed()).from_networkx(extended_graph)\n",
+    "igraph_g = igraphGraph(directed=False).from_networkx(nx.from_numpy_array(extended_graph_adjacency_matrix.numpy()))\n",
     "print(igraph_g.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[682 685 687]\n",
-      " [764 882 884]\n",
-      " [882 884 942]]\n",
-      "32790\n"
+      "torch.Size([43747, 3])\n"
      ]
     }
    ],
    "source": [
     "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
-    "print(triangles_ids_igraph[:3])\n",
-    "print(len(triangles_ids_igraph))"
+    "triangles = torch.Tensor(np.array(igraph_g.vs['_nx_name'])[triangles_ids_igraph])\n",
+    "print(triangles.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[75.07823    -1.3272538  81.26335   ]\n",
-      "  [75.18281    -1.9813722  81.33282   ]\n",
-      "  [75.142204   -1.9813722  81.3756    ]]\n",
-      "\n",
-      " [[75.01782    -0.66553295  3.7821789 ]\n",
-      "  [75.31144    -3.2518802   3.2605693 ]\n",
-      "  [75.53943    -3.2518802   3.4885595 ]]\n",
-      "\n",
-      " [[75.31144    -3.2518802   3.2605693 ]\n",
-      "  [75.53943    -3.2518802   3.4885595 ]\n",
-      "  [75.60927    -3.2518802   3.6704957 ]]]\n",
-      "32790\n"
+      "torch.Size([43747])\n"
      ]
     }
    ],
    "source": [
-    "triangles = np.array(igraph_g.vs['_nx_name'])[triangles_ids_igraph]   #les triangles\n",
-    "# triangles = [list(map(tuple, row)) for row in triangles.tolist()]\n",
-    "print(triangles[:3])\n",
-    "print(len(triangles))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32790,)\n",
-      "[3.66599607e-26 3.92631320e-26 9.07928958e-26 ... 9.85191834e-14\n",
-      " 9.74778633e-14 8.43601564e-14]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Extract indices for each triangle\n",
-    "i, j, k = triangles_ids_igraph.T\n",
+    "class FirstPInitLayer(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
     "\n",
-    "# Extract probabilities using advanced indexing\n",
-    "A_s_ij = A_s[i, j]\n",
-    "A_s_ik = A_s[i, k]\n",
-    "A_s_jk = A_s[j, k]\n",
+    "    def forward(self, triangles_indexes):\n",
+    "        # Extract indices for each triangle\n",
+    "        i, j, k = triangles_ids_igraph.T\n",
     "\n",
-    "# Calculate the barycenter probabilities\n",
-    "p_init = np.zeros(len(triangles))\n",
-    "p_init = (A_s_ij + A_s_ik + A_s_jk) / 3\n",
+    "        # Extract probabilities using advanced indexing\n",
+    "        A_s_ij = A_s[i, j]\n",
+    "        A_s_ik = A_s[i, k]\n",
+    "        A_s_jk = A_s[j, k]\n",
     "\n",
-    "print(p_init.shape)\n",
-    "print(p_init)"
+    "        # Calculate the barycenter probabilities\n",
+    "        p_init = torch.zeros(len(triangles))\n",
+    "        p_init = (A_s_ij + A_s_ik + A_s_jk) / 3\n",
+    "        return p_init\n",
+    "\n",
+    "p_init_layer = FirstPInitLayer()\n",
+    "p_init = p_init_layer(triangles_ids_igraph)\n",
+    "print(p_init.shape)"
    ]
   },
   {
