added barycenters + diff_vectors torch

--- a/script.ipynb
+++ b/script.ipynb
@@ -465,26 +465,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([43747, 3])\n"
+      "torch.Size([43747, 3, 3])\n"
      ]
     }
    ],
    "source": [
     "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
-    "triangles = torch.Tensor(np.array(igraph_g.vs['_nx_name'])[triangles_ids_igraph])\n",
+    "triangles = extended_graph_nodes[triangles_ids_igraph]\n",
     "print(triangles.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -528,24 +528,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32790, 3)\n",
-      "[[75.13442   -1.7633328 81.32392  ]\n",
-      " [75.28956   -2.3897645  3.510436 ]\n",
-      " [75.48671   -3.25188    3.4732082]]\n"
+      "torch.Size([43747, 3])\n"
      ]
     }
    ],
    "source": [
-    "barycenters = np.mean(triangles, axis=1)\n",
-    "print(barycenters.shape)\n",
-    "print(barycenters[:3])"
+    "barycenters = triangles.mean(1)\n",
+    "print(barycenters.shape)"
    ]
   },
   {
@@ -600,31 +596,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32790, 3)\n",
-      "[[0.66605747 0.66675615 0.05898531]\n",
-      " [2.6547089  2.6547084  0.32242608]]\n"
+      "torch.Size([43747, 3])\n"
      ]
     }
    ],
    "source": [
-    "diff_vectors = list()\n",
+    "v0, v1, v2 = triangles[:, 0], triangles[:, 1], triangles[:, 2]\n",
     "\n",
-    "for triangle in triangles:\n",
-    "    e_ij = np.linalg.norm(np.array(triangle[0]) - np.array(triangle[1]))    #Calculate the vectors for each edge of each triangles\n",
-    "    e_ik = np.linalg.norm(np.array(triangle[0]) - np.array(triangle[2]))\n",
-    "    e_jk = np.linalg.norm(np.array(triangle[1]) - np.array(triangle[2]))\n",
-    "    diff_vectors.append([e_ij, e_ik, e_jk])\n",
+    "# Calculate edge vectors\n",
+    "e_ij = torch.norm(v0 - v1, dim=1)\n",
+    "e_ik = torch.norm(v0 - v2, dim=1)\n",
+    "e_jk = torch.norm(v1 - v2, dim=1)\n",
     "\n",
-    "diff_vectors = np.array(diff_vectors)\n",
-    "print(diff_vectors.shape)\n",
-    "print(diff_vectors[:2])"
+    "# Stack the edge vectors along the last dimension\n",
+    "diff_vectors = torch.stack([e_ij, e_ik, e_jk], dim=1)\n",
+    "\n",
+    "print(diff_vectors.shape)"
    ]
   },
   {
