added slow knn triangles

--- a/script.ipynb
+++ b/script.ipynb
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_4840\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6276\\1471860285.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  result_np = torch.stack([previous_inclusion_score, torch.tensor(list_inc_score)])\n"
      ]
     },
@@ -286,6 +286,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1500, 3])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extended_graph_nodes.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +323,7 @@
        "torch.Size([1500, 64])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +560,15 @@
     }
    ],
    "source": [
-    "barycenters = triangles.mean(1)\n",
+    "class BarycentersLayer(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, triangles):\n",
+    "        return triangles.mean(1)\n",
+    "\n",
+    "barycenters_layer = BarycentersLayer()\n",
+    "barycenters = barycenters_layer(triangles)\n",
     "print(barycenters.shape)"
    ]
   },
@@ -553,11 +581,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([43747, 20])\n"
+     ]
+    }
+   ],
    "source": [
-    "_, indices_neigh_tri = NearestNeighbors(n_neighbors=number_neigh_tri).fit(barycenters).kneighbors(barycenters)          # Find k='number_neigh_tri' neighbors of each triangles based on theirs barycenters"
+    "class KNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, x, k=20):\n",
+    "        indices_knn = torch.empty(size=(x.shape[0], k))\n",
+    "        \n",
+    "        for i, neighbors in enumerate(x):\n",
+    "            distances = torch.norm(neighbors-x, dim=1)\n",
+    "            # print(distances.shape)\n",
+    "            # print(distances)\n",
+    "            # print(i)\n",
+    "\n",
+    "            indices_knn[i] = distances.topk(k, dim=0, largest=False).indices.clone()  # Indices of the k-nearest neighbors\n",
+    "            # print(indices_knn.shape)\n",
+    "            # print(indices_knn)\n",
+    "            \n",
+    "        return indices_knn\n",
+    "\n",
+    "knn_layer = KNN()\n",
+    "indices_neigh_tri = knn_layer(barycenters).int()  #change datatype\n",
+    "print(indices_neigh_tri.shape)"
    ]
   },
   {
@@ -569,14 +626,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32790, 19, 3)\n"
+      "torch.Size([43747, 19, 3])\n"
      ]
     }
    ],
@@ -596,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -630,37 +687,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(32790,)"
+       "(torch.Size([43747]), torch.Size([43747]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max_diff_vectors = diff_vectors.max(axis=1)       # calculate t_n_max\n",
-    "min_diff_vectors = diff_vectors.min(axis=1)       # calculate t_n_min\n",
-    "max_diff_vectors.shape"
+    "max_diff_vectors = diff_vectors.max(dim=1).values       # calculate t_n_max\n",
+    "min_diff_vectors = diff_vectors.min(dim=1).values       # calculate t_n_min\n",
+    "max_diff_vectors.shape, min_diff_vectors.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32790, 19)\n",
-      "(32790, 19)\n"
+      "torch.Size([43747, 19])\n",
+      "torch.Size([43747, 19])\n"
      ]
     }
    ],
@@ -673,14 +730,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32790, 19, 5)\n"
+      "(43747, 19, 5)\n"
      ]
     }
    ],
@@ -705,24 +762,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9999999999999146\n",
-      "(32790,)\n",
-      "[3.04963754e-05 3.04963754e-05 3.04963754e-05 ... 3.04963754e-05\n",
-      " 3.04963754e-05 3.04963754e-05]\n"
+      "0.99999964\n",
+      "(43747,)\n",
+      "[2.3804538e-05 2.3797165e-05 2.3302142e-05 ... 2.1143813e-05 2.1072487e-05\n",
+      " 2.1078808e-05]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_17108\\474768578.py:5: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6276\\474768578.py:5: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  final_scores = torch.nn.functional.softmax(torch.tensor(f_final))    #proba des triangles\n",
+      "C:\\Users\\Arthur\\AppData\\Local\\Temp\\ipykernel_6276\\474768578.py:5: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  final_scores = torch.nn.functional.softmax(torch.tensor(f_final))    #proba des triangles\n"
      ]
     }
