--- a/script.ipynb
+++ b/script.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -722,27 +722,27 @@
     }
    ],
    "source": [
-    "max_diff_vectors_diff = np.subtract(max_diff_vectors[indices_neigh_tri[:, 0]][:, np.newaxis], max_diff_vectors[indices_neigh_tri[:, 1:]])   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_max - t_m_max\n",
+    "max_diff_vectors_diff = max_diff_vectors[indices_neigh_tri[:, 0]][:, None] - max_diff_vectors[indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_max - t_m_max\n",
+    "min_diff_vectors_diff = min_diff_vectors[indices_neigh_tri[:, 0]][:, None] - min_diff_vectors[indices_neigh_tri[:, 1:]]   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_min - t_m_min\n",
     "print(max_diff_vectors_diff.shape)\n",
-    "min_diff_vectors_diff = np.subtract(min_diff_vectors[indices_neigh_tri[:, 0]][:, np.newaxis], min_diff_vectors[indices_neigh_tri[:, 1:]])   #Inverser la différence des barycentres si nécéssaire   # calculate t_n_min - t_m_min\n",
     "print(min_diff_vectors_diff.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(43747, 19, 5)\n"
+      "torch.Size([43747, 19, 5])\n"
      ]
     }
    ],
    "source": [
-    "r_matrix = np.zeros((len(triangles), number_neigh_tri-1, 5))\n",
+    "r_matrix = torch.zeros((triangles.shape[0], number_neigh_tri-1, 5))\n",
     "\n",
     "r_matrix[:, :, 0]   = min_diff_vectors_diff\n",
     "r_matrix[:, :, 1]   = max_diff_vectors_diff\n",
